--- a/src/components/LeftSideBar.module.css
+++ b/src/components/LeftSideBar.module.css
@@ -2,5 +2,7 @@
   height: calc(100vh - var(--header-height));
   max-width: var(--left-sidebar-max-width);
   overscroll-behavior: contain;
+  padding: var(--p-space-200);
   overflow: scroll;
+  background-color: var(--p-color-bg-surface-success);
 }
