Refactor Tailor code 🚀

--- a/src/components/Preview/Preview.module.css
+++ b/src/components/Preview/Preview.module.css
@@ -1,6 +1,13 @@
-.hover:hover {
+.wrapper:hover {
   border: 1px solid var(--p-color-border-focus);
+}
+
+.wrapper {
   cursor: pointer;
+}
+
+.inlineBlock {
+  display: inline-block;
 }
 
 .selected {
