Add ButtonGroup component defaultProps 💞

--- a/src/components/Preview/Preview.module.css
+++ b/src/components/Preview/Preview.module.css
@@ -6,6 +6,11 @@
   cursor: pointer;
 }
 
+.emptyChild {
+  min-height: 50px;
+  border: 1px dashed var(--p-color-border-focus);
+}
+
 .inlineBlock {
   display: inline-block;
 }
