Let's rock sortable 🚀

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,5 +2,10 @@
   cursor: move;
   background: var(--p-color-bg-surface-success-active);
   border-radius: var(--p-border-radius-200);
-  padding: 0 var(--p-space-200);
+  padding: var(--p-space-200);
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: max-content;
 }
