--- a/src/components/RightSidebar.module.css
+++ b/src/components/RightSidebar.module.css
@@ -6,4 +6,7 @@
   padding: var(--p-space-400);
   background-color: var(--p-color-bg-fill-brand);
   color: var(--p-color-text-success-on-bg-fill);
+
+  --p-color-text-link: rgb(101 168 255);
+  --p-color-text-link-hover: rgb(101 168 255);
 }
