--- a/src/components/LeftSideBar.module.css
+++ b/src/components/LeftSideBar.module.css
@@ -1,4 +1,4 @@
-.leftSideBarWrapper {
+.wrapper {
   height: calc(100vh - var(--header-height));
   max-width: var(--left-sidebar-max-width);
   overscroll-behavior: contain;
@@ -10,8 +10,4 @@
   display: flex;
   flex-direction: column;
   gap: var(--p-space-200);
-}
-
-.draggableWrapper {
-  cursor: pointer;
 }
