--- a/src/components/CodePanel.module.css
+++ b/src/components/CodePanel.module.css
@@ -14,3 +14,9 @@
   width: 100%;
   margin: 0;
 }
+
+.copyButtonWrapper {
+  position: absolute;
+  top: var(--p-space-200);
+  right: var(--p-space-200);
+}
