Add AvatarTailor component 🚀

--- a/src/components/Preview/Preview.module.css
+++ b/src/components/Preview/Preview.module.css
@@ -16,11 +16,12 @@
 
 .builderMode {
   background: var(--p-color-bg-surface-success);
-  border: 1px dashed var(--p-color-border-focus);
+  border: 0.5px dashed var(--p-color-border-focus);
   padding: var(--p-space-400);
-  margin: var(--p-space-200) var(--p-space-100);
+  margin: var(--p-space-100) var(--p-space-050);
 }
 
 .selected {
-  border: 1px solid var(--p-color-border-focus);
+  border: 0.5px solid var(--p-color-border-focus);
+  padding: var(--p-space-050);
 }
