Fix accessibility color issues 🐻‍❄️

--- a/src/components/RightSidebar.module.css
+++ b/src/components/RightSidebar.module.css
@@ -9,4 +9,5 @@
 
   --p-color-text-link: rgb(101 168 255);
   --p-color-text-link-hover: rgb(101 168 255);
+  --p-color-text-link-active: rgb(101 168 255);
 }
