--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -8,4 +8,5 @@
 
   --p-color-text-link: rgb(101 168 255);
   --p-color-text-link-hover: rgb(101 168 255);
+  --p-color-text-link-active: rgb(101 168 255);
 }
