Fix code panel styling 🚀

--- a/src/components/MainBody.module.css
+++ b/src/components/MainBody.module.css
@@ -11,3 +11,7 @@
 .isOver {
   background-color: var(--p-surface-highlight);
 }
+
+.splitPanel {
+  height: calc(100vh - var(--header-height)) !important;
+}
