Update isOver background color 🐻‍❄️

--- a/src/components/Preview/Preview.module.css
+++ b/src/components/Preview/Preview.module.css
@@ -17,7 +17,7 @@
 }
 
 .isOver {
-  background: var(--p-color-bg-fill-magic);
+  background: var(--p-color-bg-fill-info);
 }
 
 .containerWrapperSelected {
