--- a/src/components/RightSidebar.module.css
+++ b/src/components/RightSidebar.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  height: calc(100vh - var(--header-height));
+  height: calc(100vh - var(--topbar-height));
   max-width: var(--right-sidebar-max-width);
   overscroll-behavior: contain;
   overflow: scroll;
