--- a/src/components/LeftSideBar.module.css
+++ b/src/components/LeftSideBar.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  height: calc(100vh - var(--header-height));
+  height: calc(100vh - var(--topbar-height));
   max-width: var(--left-sidebar-max-width);
   overscroll-behavior: contain;
   padding: var(--p-space-400);
