--- a/src/components/Overlay.module.css
+++ b/src/components/Overlay.module.css
@@ -1,13 +1,11 @@
 .wrapper {
-  cursor: move;
+  cursor: none;
   background: var(--p-color-bg-surface-success-active);
   border-radius: var(--p-border-radius-200);
-  padding: var(--p-space-200) var(--p-space-200) var(--p-space-200)
-    var(--p-space-500);
-
+  padding: var(--p-space-100) var(--p-space-200);
   display: flex;
   align-items: center;
   justify-content: center;
-  width: fit-content;
-  min-width: var(--p-width-2000);
+  height: var(--p-height-500);
+  width: var(--p-width-500);
 }
