--- a/src/components/Preview/Preview.module.css
+++ b/src/components/Preview/Preview.module.css
@@ -2,6 +2,8 @@
   cursor: pointer;
   margin: 0 !important;
   padding: 0 !important;
+  width: max-content !important;
+  height: max-content !important;
 }
 
 .containerWrapper {
